--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ h2,h3 {
     font-weight: 600;
 }
 
+p {
+    font-weight: 600;
+}
+
 /* Section Colors */
 .colored {
     background-color: #E8C07D;
@@ -37,18 +41,27 @@ h2,h3 {
 
 .title {
     padding:0 25%;
-
+    position:relative;
 }
 
 .banner-title {
+    position:relative;
     font-size:4em;
     padding-top:50px;
 }
 
 .banner-subtitle {
+    position:relative;
     font-size:4em;
     padding-top:50px;
-    padding-bottom:50px;
+    padding-bottom:100px;
+}
+
+.cattails {
+    position: absolute;
+    left:-10px;
+    bottom:-40px;
+    width:100%;
 }
 
 /* Navbar */
@@ -71,10 +84,20 @@ h2,h3 {
 
 /* Welcome */
 
+#welcome {
+    position:relative;
+}
+
+.roots {
+    position:absolute;
+    left:-10px;
+}
+
 .welcome {
     padding:50px 0 50px 0;
     text-align:center;
     width:70%;
+    position:relative;
 }
 
 .welcome-msg {
@@ -85,7 +108,7 @@ h2,h3 {
 .welcome-bio {
     color: #E8C07D;
     padding: 30px 0;
-    font-size: 1.2em;
+    font-size: 1.25em;
     width:80%;
     margin: 0 auto;
 }
