--- a/css/styles.css
+++ b/css/styles.css
@@ -107,13 +107,15 @@ p {
 .welcome-msg {
     color: #E8C07D;
     padding-top:50px;
+    font-weight:900;
+    font-size:4em;
 }
 
 .welcome-bio {
     color: #E8C07D;
     padding: 30px 0;
     font-size: 1.25em;
-    width:80%;
+    width:30em;
     margin: 0 auto;
 }
 
@@ -209,7 +211,7 @@ p {
     .logo {
         float:none;
         margin: 0 auto;
-        width:50%;
+        width:10%;
         padding-top:30px;
     }
 
